src/main/java/com/example/peep/errors/errorcode/ErrorCode.java
package com.example.peep.errors.errorcode;

import org.springframework.http.HttpStatus;

public interface ErrorCode {

    String name();

    HttpStatus getHttpStatus();

    String getMessage();
}
